# nexus-ai

./: LICENSE  README.md  TASKS.md  pyproject.toml  requirements.txt  setup.py
docs/: llm_api_cost_optimization.md
nexus_ai/: main.py
nexus_ai/claude/: client.py
nexus_ai/core/: executor.py  output.py  session.py
nexus_ai/models/: __init__.py  base.py  claude_api.py  claude_local.py  factory.py  gemini_local.py
nexus_ai/repl/: base.py  nexus_repl.py  prompt_toolkit_repl.py  python_repl.py  task_repl.py
nexus_ai/utils/: config.py
tests/: test_multi_model_architecture.py  test_nexus.py  test_pty_fix.py
